--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "notess",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,9 +15,11 @@
     "@types/node": "^20.10.4",
     "eslint": "^8.55.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@types/yargs": "^17.0.32",
     "chalk": "^5.3.0",
     "yargs": "^17.7.2"
   }
